[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/UI/GunUI/UpgradeSlots/UpgradeSlot.png" type="Texture" id=1]
[ext_resource path="res://Common/UI/GunUI/UpgradeSlots/UpgradeSlotNumbered.gd" type="Script" id=2]

[node name="UpgradeSlotNumbered" type="VBoxContainer"]
mouse_filter = 0
alignment = 1
script = ExtResource( 2 )

[node name="SlotNum" type="Label" parent="."]
margin_right = 32.0
margin_bottom = 14.0
text = "0"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 18.0
margin_right = 32.0
margin_bottom = 50.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="UpgradeIcon" type="TextureRect" parent="CenterContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0

[connection signal="gui_input" from="." to="." method="_on_UpgradeSlotNumbered_gui_input"]
